materials/04 Основы работы с Kubernetes (часть 1)/schetinnikov-otus-arch-labs/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: hello.world
    http:
      paths:
        - path: /myapp($|/)(.*)
          backend:
            serviceName: hello-service-canary
            servicePort: 9000
